--- a/.env.dist
+++ b/.env.dist
@@ -1,13 +1,13 @@
 MYSQL_DATABASE=mailserver
 MYSQL_USER=mailserver
-MYSQL_PASSWORD=changeme
-MYSQL_ROOT_PASSWORD=changeme
-MAILNAME=mail.example.com
-POSTMASTER=postmaster@example.com
+MYSQL_PASSWORD=123456mailne
+MYSQL_ROOT_PASSWORD="Saobang12@"
+MAILNAME=mail.tinyinv.com
+POSTMASTER=postmaster@tinyinv.com
 RELAYHOST=false
 FILTER_MIME=false
 FILTER_VIRUS=true
 ENABLE_IMAP=true
 ENABLE_POP3=true
-CONTROLLER_PASSWORD=changeme
+CONTROLLER_PASSWORD="Saobang12@3"
 WAITSTART_TIMEOUT=2m
